--- a/coverage-report/com.nosbielc.mixed.salad.auth.config/.classes/WebSecurityConfig.html
+++ b/coverage-report/com.nosbielc.mixed.salad.auth.config/.classes/WebSecurityConfig.html
@@ -86,7 +86,7 @@
 <i>12</i>&nbsp;import org.springframework.security.config.annotation.web.configuration.WebSecurityConfigurerAdapter;
 <i>13</i>&nbsp;import org.springframework.security.crypto.password.PasswordEncoder;
 <i>14</i>&nbsp;
-<i>15</i>&nbsp;import com.nosbielc.mixed.salad.auth.service.UserDetailsService;
+<i>15</i>&nbsp;import UserDetailsCustomService;
 <i>16</i>&nbsp;
 <i>17</i>&nbsp;@Configuration
 <i>18</i>&nbsp;@EnableWebSecurity
